Loading images offline

--- a/clip-training/TrainClip.ipynb
+++ b/clip-training/TrainClip.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "02365997-7c4a-4355-af33-ba63575a2923",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "3868ed97-13d3-4bb9-8b37-9eefc0c1b4bb",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "6c052111-59fc-453f-b014-08f9ae3b6b1a",
    "metadata": {},
    "outputs": [],
@@ -330,12 +330,13 @@
     "                 device\n",
     "    ):\n",
     "        \n",
-    "        # Remoe invalid image_files\n",
-    "        self.image_files = image_files\n",
-    "        self.texts = texts\n",
-    "        self.tokenizer = tokenizer\n",
     "        self.image_preprocess = image_preprocess\n",
     "        self.text_preprocess = text_preprocess\n",
+    "        self.image_files = image_files\n",
+    "        self.images = [self.image_preprocess(self.load_image(i)) for i in self.image_files]\n",
+    "        self.texts = texts\n",
+    "        self.tokenizer = tokenizer\n",
+    "       \n",
     "        labels = [ (1,0) if l else (0,1) for l in labels ]\n",
     "        self.labels = torch.tensor(labels).unsqueeze(dim=1).type(torch.half)\n",
     "        self.device = device\n",
@@ -345,9 +346,8 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        # Get image\n",
-    "        img_file = self.image_files[idx]\n",
-    "        image = self.load_image(img_file)\n",
-    "        preprocessed_img = self.image_preprocess(image).to(device)\n",
+    "        image = self.images[idx]\n",
+    "        preprocessed_img = image.to(device)\n",
     "        \n",
     "        # Get Text\n",
     "        text = self.texts[idx]\n",
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "a97dea2f-782f-4a9c-9c59-36366bf64f54",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "ecf5c1df-40b3-4bc4-bb5d-ac897def75b1",
    "metadata": {},
    "outputs": [],
@@ -508,8 +508,8 @@
     "# Hyperparameters\n",
     "LR=0.1\n",
     "HIDDEN_UNITS = 512\n",
-    "EPOCH = 20\n",
-    "BATCH_SIZE= 2048\n",
+    "EPOCH = 100\n",
+    "BATCH_SIZE= 4096\n",
     "\n",
     "# Model\n",
     "ef_model = EvFModel(model, HIDDEN_UNITS).to(device)\n",
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "26d32cea-e8a1-4722-9ecd-9a383cf61801",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ba9f07a8-faa0-40d8-a325-18444ea597d8",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "9fb42940-aaa2-44f7-9fc0-81bf403e2b7e",
    "metadata": {},
    "outputs": [],
@@ -619,12 +619,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d59a24e03124f689482d2e3ab5b7aa8",
+       "model_id": "d885f08eaae740b5ace0f1e59ebdc187",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/20 [00:00<?, ?it/s]"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b06d1256-13f1-44c1-8dab-79fe60839387",
+   "id": "a08a9875-f35b-493d-b8c0-6fc522b419ad",
    "metadata": {},
    "outputs": [],
    "source": []
