--- a/clip-training/TrainClip.ipynb
+++ b/clip-training/TrainClip.ipynb
@@ -525,9 +525,8 @@
     "eval_dataset = CLIPDataset(eval_imgs, eval_txts, clip.tokenize, preprocess, eval_labels, device)\n",
     "eval_loader = DataLoader(eval_dataset, batch_size=BATCH_SIZE, shuffle=False)\n",
     "\n",
-    "# Test\n",
-    "test_dataset = CLIPDataset(test_imgs, test_txts, clip.tokenize, preprocess, test_labels, device)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False)\n"
+    "\n",
+    "\n"
    ]
   },
   {
@@ -612,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4db5323c-09cd-4dba-87ce-9d9f92b79ded",
    "metadata": {},
    "outputs": [
@@ -694,10 +693,296 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a08a9875-f35b-493d-b8c0-6fc522b419ad",
+   "id": "6157ed8b-786b-465f-95ee-47904d3010e2",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a08a9875-f35b-493d-b8c0-6fc522b419ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Acc 0.844\n",
+      "Test Loss 0.35312823486328127\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Freeze model\n",
+    "ef_model.eval()\n",
+    "\n",
+    "# Test\n",
+    "test_dataset = CLIPDataset(test_imgs, test_txts, clip.tokenize, preprocess, test_labels, device)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=1, shuffle=False)\n",
+    "\n",
+    "def test_step(img_x, txt_x, y):\n",
+    "    # Função de Teste\n",
+    "    y_logits =  ef_model(img_x.to(device), txt_x.to(device))\n",
+    "    loss_func = torch.nn.CrossEntropyLoss()\n",
+    "    loss = loss_func(y_logits, y)\n",
+    "    \n",
+    "    # Calcula Acurácia\n",
+    "    y_hat = torch.argmax(y_logits, dim=1)\n",
+    "    y_ans =  torch.argmax(y, dim=1)\n",
+    "    accuracy = (y_hat == y_ans).type(torch.float).mean()\n",
+    "    \n",
+    "    return loss.item(), accuracy.item()\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    test_loss, test_acc = np.average([\n",
+    "        test_step(x.to(device), mask.to(device), y.to(device))\n",
+    "        for x, mask, y in test_loader\n",
+    "    ],axis=0)\n",
+    "\n",
+    "print(\"Test Acc\", test_acc)\n",
+    "print(\"Test Loss\", test_loss)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "545dfd00-2bf1-48f1-a714-83f80f2300d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Save Model\n",
+    "torch.save(ef_model.state_dict(), f'ef_model-ACC-{test_acc}.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89cad984-6120-446f-a189-0ad3c8ea1f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load model\n",
+    "model, preprocess = clip.load(\"ViT-B/32\", device=device, jit=False)\n",
+    "\n",
+    "# Hyperparameters\n",
+    "LR=0.1\n",
+    "HIDDEN_UNITS = 512\n",
+    "EPOCH = 100\n",
+    "BATCH_SIZE= 4096\n",
+    "\n",
+    "# Model\n",
+    "ef_model = EvFModel(model, HIDDEN_UNITS).to(device)\n",
+    "ef_model.load_state_dict(torch.load('ef_model-ACC-0.844.model'))\n",
+    "ef_model.eval()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba77149b-73eb-439d-8c46-42571c6c7d9d",
+   "metadata": {},
+   "source": [
+    "# Next Step is extract the features from the not_used_data and visualize its cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8cac43c-5722-476d-bf0f-b9779c86960f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IMG_X ,TXT_X ,Y = next(iter(train_loader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "8ce3b252-65a6-4dcb-885e-8bc1b5921c32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class featX(torch.nn.Module):\n",
+    "\n",
+    "    def __init__(self,model):\n",
+    "\n",
+    "        super(featX, self).__init__()\n",
+    "        \n",
+    "        feature_extractor = torch.nn.Sequential(*list(model.children())[:-1])\n",
+    "        self.clip_model = feature_extractor[0]\n",
+    "        self.feats = feature_extractor[1]\n",
+    "        \n",
+    "        for param in self.clip_model.parameters():\n",
+    "            param.requires_grad = False\n",
+    "            \n",
+    "        for param in self.feats.parameters():\n",
+    "            param.requires_grad = False\n",
+    "\n",
+    "    def forward(self, img_x, txt_x):\n",
+    "        \n",
+    "        \n",
+    "        # get img embeddings\n",
+    "        img_features = self.clip_model.encode_image(img_x)\n",
+    "        \n",
+    "        # get txt embeddings\n",
+    "        txt_features = self.clip_model.encode_text(txt_x)\n",
+    "        \n",
+    "        # make combinantion\n",
+    "        # Simplest combination ever\n",
+    "        x = img_features + txt_features\n",
+    "        x = self.feats(x)\n",
+    "\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "3cd5e59b-5034-4d00-a19b-8f042f3b3d1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.3149, -0.3792,  0.9390,  ...,  0.5029,  1.2715, -1.2559],\n",
+       "        [-0.0446,  0.1746,  1.1045,  ...,  0.2695,  1.4258, -0.4944],\n",
+       "        [ 0.1394, -0.0737,  0.9102,  ...,  0.4424,  0.8730, -0.2104],\n",
+       "        ...,\n",
+       "        [ 0.2629, -0.7715,  0.8525,  ...,  0.1625,  2.1699,  0.1089],\n",
+       "        [ 0.1946,  0.3721,  1.2988,  ...,  0.7896,  2.3574, -0.6270],\n",
+       "        [ 1.7549, -0.3376,  0.5566,  ..., -0.7622,  1.6777,  0.1235]],\n",
+       "       device='cuda:0', dtype=torch.float16)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_extractor = featX(ef_model).to(device)\n",
+    "feature_extractor(IMG_X ,TXT_X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ede113ec-e8ba-4120-acd4-b30e9a64bff8",
+   "metadata": {},
+   "source": [
+    "# Extract features from not_use_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "45663ac5-ba16-49f3-a077-24b50cdcb4f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_data = pd.read_pickle('not_use_data.pkl').rename(columns={'txt':'txt_label'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9a61a91c-f5d1-4178-a5ff-1041b3bb9050",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_imgs = []\n",
+    "cluster_txts = []\n",
+    "cluster_labels = []\n",
+    "for _, row in cluster_data.iterrows():\n",
+    "    \n",
+    "    cluster_imgs.append(row['img_path'].replace(\"annotated-data\", \"not_use_data\"))\n",
+    "    # Applie Preprocess stage here\n",
+    "    cluster_txts.append(text_preprocess.pre_process(row['text'], keep_hashtag = True, keep_special_symbols = False))\n",
+    "    \n",
+    "    if row['img_label'] or row['txt_label']:\n",
+    "        cluster_labels.append(1)\n",
+    "    else:\n",
+    "        cluster_labels.append(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f53ccf4c-5900-40d6-8a63-b54b3470659b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_dataset = CLIPDataset(cluster_imgs, cluster_txts, clip.tokenize, preprocess, cluster_labels, device)\n",
+    "cluster_loader = DataLoader(cluster_dataset, batch_size=BATCH_SIZE, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "51005620-d8c0-45f8-b05e-415a82eea636",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "83a7977d96b740af96eb40cb4008694b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def normalize_vector(\n",
+    "    vec: np.ndarray,\n",
+    "    axis: int = -1,\n",
+    "    order: int = 2\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Normalize a vector.\n",
+    "    If you pass a Matrix, each line of the matrix will be \n",
+    "    considerated as a different vector and normalized as it.\n",
+    "    \"\"\"\n",
+    "    l2 = np.atleast_1d(np.linalg.norm(vec, order, axis))\n",
+    "    l2[l2==0] = 1\n",
+    "    return vec / np.expand_dims(l2, axis)\n",
+    "\n",
+    "embedded_vectors = []\n",
+    "for IMG_X ,TXT_X ,Y in tqdm(cluster_loader, total=np.ceil(len(cluster_dataset) / BATCH_SIZE).astype(int)):\n",
+    "    imgs = IMG_X.to(device)\n",
+    "    txts = TXT_X.to(device)\n",
+    "    with torch.no_grad():\n",
+    "        output = feature_extractor(imgs,txts)\n",
+    "        output = output.squeeze().cpu().numpy()\n",
+    "\n",
+    "    output = normalize_vector(output)\n",
+    "\n",
+    "    embedded_vectors += output.tolist()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "053d9b51-24fe-4d8c-9d7f-9bb3dbd58221",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_data['clip_embeddings'] = embedded_vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "521e8e6a-9b49-4b5c-9bc2-621f938644cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_data.to_pickle('embeddings.pkl')"
+   ]
   }
  ],
  "metadata": {
