--- a/embeddings/Extract Embeddings.ipynb
+++ b/embeddings/Extract Embeddings.ipynb
@@ -776,12 +776,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 97,
    "id": "6e916692-f6d8-4399-ac93-397d856f705b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweet_data.to_pickle('tweet_data_clip_img_emb.pkl')"
+    "tweet_data.to_pickle('tweet_data_all_emb.pkl')"
    ]
   },
   {
