--- a/embeddings/Extract Embeddings.ipynb
+++ b/embeddings/Extract Embeddings.ipynb
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 99,
    "id": "88697a23-0553-4f5e-bc6e-a4de7b7a691c",
    "metadata": {},
    "outputs": [
@@ -1093,13 +1093,75 @@
        "[5000 rows x 10 columns]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tweet_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5fa4a78-183e-43e4-adf7-31af12b0f49f",
+   "metadata": {},
+   "source": [
+    "# Create concat and sum of embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "a64b2f63-8a15-4477-a820-5aa18c5443b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweet_data = tweet_data.rename(columns={'imgs_embeddings':'MobileNet_embeddings', 'text_embeddings': 'Roberta_embeddings'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "21d71324-d1ab-4ede-91d4-730962d0e0b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MobileNet_Roberta_embeddings = []\n",
+    "clip_imgs_cat_text_embeddings = []\n",
+    "clip_imgs_sum_text_embeddings = []\n",
+    "for index, row in tweet_data.iterrows():\n",
+    "    robert_emb = row['Roberta_embeddings']\n",
+    "    mnet_emb = row['MobileNet_embeddings']\n",
+    "    MobileNet_Roberta_embeddings.append(mnet_emb + robert_emb)\n",
+    "    \n",
+    "    clip_img_emb = row['clip_imgs_embeddings']\n",
+    "    clip_txt_emb = row['clip_text_embeddings']\n",
+    "    clip_imgs_cat_text_embeddings.append(clip_img_emb + clip_txt_emb)\n",
+    "    clip_imgs_sum_text_embeddings.append((np.array(clip_img_emb) + np.array(clip_txt_emb)).tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "c6e5de4f-5a61-4f24-901a-902d8a88f488",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "tweet_data['MobileNet_Roberta_embeddings'] = MobileNet_Roberta_embeddings\n",
+    "tweet_data['clip_imgs_cat_text_embeddings'] = clip_imgs_cat_text_embeddings\n",
+    "tweet_data['clip_imgs_sum_text_embeddings'] = clip_imgs_sum_text_embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "b916640e-898d-44d1-a829-9687165b6194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweet_data.to_pickle('tweet_data_all_emb.pkl')"
    ]
   }
  ],
