--- a/clusterings/clustering_representative.ipynb
+++ b/clusterings/clustering_representative.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 101,
    "id": "3ed419a5-6e49-4788-b827-6f5e5d0b5dc0",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 102,
    "id": "c56026f8-4ab7-433f-8ed7-88348087bd45",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 103,
    "id": "b61722ed-581a-4201-b1ed-32178dc94cb6",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 104,
    "id": "f26b4061-da17-4b40-a7af-10d6978892f3",
    "metadata": {},
    "outputs": [],
@@ -139,24 +139,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 105,
    "id": "547322bd-18bd-4ff7-b8c2-83c0888ce046",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nx.write_gpickle(G, \"graphSum85.gpickle\")\n",
-    "# G = nx.read_gpickle(\"test.gpickle\")"
+    "# nx.write_gpickle(G, \"graphSum85.gpickle\")\n",
+    "G = nx.read_gpickle(\"graph.gpickle\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 106,
    "id": "6743d728-52cf-4f11-b55c-90f9f9d00e0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "g = ig.Graph.from_networkx(G)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "449621b5-7cd8-4a1f-a8f6-8d16f38332ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -168,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 107,
    "id": "4d3d853e-efd9-4566-8bd6-8cfaf88c6939",
    "metadata": {},
    "outputs": [],
@@ -178,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 108,
    "id": "e29213a5-44c2-47ff-bf95-75bc4d656bb4",
    "metadata": {},
    "outputs": [],
@@ -192,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 109,
    "id": "a60a60c5-3a7c-403a-9a5b-3919eb39c749",
    "metadata": {},
    "outputs": [
@@ -202,7 +210,7 @@
        "142"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 110,
    "id": "8728de86-526c-47cf-8557-bb1bb8715d2c",
    "metadata": {},
    "outputs": [],
@@ -289,6 +297,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6325e8ee-e951-4a91-9f48-376f80e8834b",
+   "metadata": {},
+   "source": [
+    "### Random Sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "a8105902-b4c5-41ce-8a4d-0b8561499325",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_select = []\n",
+    "cid = []\n",
+    "for k in range(len(dict_com)):\n",
+    "    g = build_graph(dict_com[k])\n",
+    "    df_select.append(dict_com[k].sample(n=10, random_state=1))\n",
+    "    cid.append([k]*10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73c55562-08bc-47f9-b1d6-0dda51386130",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat(df_select)\n",
+    "df['cluster_id'] = sum(cid, [])\n",
+    "df[['tweet_id', 'cluster_id']].to_csv('LeidenRandomSum.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "78997f83-fe5d-4e1c-bf03-19497822b8cc",
    "metadata": {},
    "source": [
@@ -333,26 +376,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat(df_select)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "b5d34649-a278-44bc-9485-6a694e44dcfa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['cluster_id'] = sum(cid, [])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "68fea600-090e-4e5a-af70-ba6fd000552c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = pd.concat(df_select)\n",
+    "df['cluster_id'] = sum(cid, [])\n",
     "df[['tweet_id', 'cluster_id']].to_csv('LeidenDegreeSum.csv')"
    ]
   },
@@ -921,6 +946,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## MCI centrality\n",
     "df_select = []\n",
     "cid = []\n",
     "for k in range(len(dict_com)):\n",
@@ -943,11 +969,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "fc2999b6-7e9e-449a-ab40-584b7d8ba6e6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Random sampling\n",
+    "df_select = []\n",
+    "cid = []\n",
+    "for k in range(len(dict_com)):\n",
+    "    g = build_graph(dict_com[k])\n",
+    "    df_select.append(dict_com[k].sample(n=10, random_state=1))\n",
+    "    cid.append([k]*10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "5d1ca267-19c6-40d7-bfbd-5a921e5b0395",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat(df_select)\n",
+    "df['cluster_id'] = sum(cid, [])\n",
+    "df[['tweet_id', 'cluster_id']].to_csv('AggRandomSum.csv')"
+   ]
   }
  ],
  "metadata": {
