--- a/clusterings/clustering_representative.ipynb
+++ b/clusterings/clustering_representative.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "186a62f1-a483-441b-b09c-4832c72d8c16",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "b48934da-e052-482a-a2fc-504dcd1967df",
    "metadata": {},
    "outputs": [],
@@ -23,27 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "6f8f3139-0e14-47f1-8798-fa6e83054ca7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_pickle('../clip-training/train.pkl')"
+    "df_train = pd.read_pickle('../clip-training/train.pkl')\n",
+    "df_val = pd.read_pickle('../clip-training/eval.pkl')\n",
+    "df_select = pd.concat([df_train, df_val])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "95ca304b-b14d-4a4c-96a7-94211a04063d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_emd = clip_emd[clip_emd['tweet_id'].isin(df_train['tweet_id'])]"
+    "train_emd = clip_emd[clip_emd['tweet_id'].isin(df_select['tweet_id'])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "31893762-ef5e-4ad0-89f4-2e4768923138",
    "metadata": {},
    "outputs": [],
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "f7dfc58c-0fc6-4395-951d-7642b24502dd",
    "metadata": {},
    "outputs": [],
@@ -73,19 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 161,
    "id": "96d3b81a-a9bc-4dc1-858b-52d99d1b08d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sentence_transformers import util\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import pairwise_distances"
+    "from sklearn.metrics import pairwise_distances\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "1a1f25f2-1ffd-4b4c-8d2b-ab24f18a05b8",
    "metadata": {},
    "outputs": [],
@@ -96,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 65,
    "id": "3ed419a5-6e49-4788-b827-6f5e5d0b5dc0",
    "metadata": {},
    "outputs": [],
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 66,
    "id": "c56026f8-4ab7-433f-8ed7-88348087bd45",
    "metadata": {},
    "outputs": [],
@@ -118,7 +121,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 67,
+   "id": "709e391f-ff5b-4481-afa7-a6a17ae74380",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3100, 3100)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cos_copy.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "id": "b61722ed-581a-4201-b1ed-32178dc94cb6",
    "metadata": {},
    "outputs": [],
@@ -129,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 72,
    "id": "f26b4061-da17-4b40-a7af-10d6978892f3",
    "metadata": {},
    "outputs": [],
@@ -139,32 +163,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 73,
    "id": "547322bd-18bd-4ff7-b8c2-83c0888ce046",
    "metadata": {},
    "outputs": [],
    "source": [
     "# nx.write_gpickle(G, \"graphSum85.gpickle\")\n",
-    "G = nx.read_gpickle(\"graph.gpickle\")"
+    "# G = nx.read_gpickle(\"graph85.gpickle\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 74,
    "id": "6743d728-52cf-4f11-b55c-90f9f9d00e0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "g = ig.Graph.from_networkx(G)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "449621b5-7cd8-4a1f-a8f6-8d16f38332ab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -176,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 68,
    "id": "4d3d853e-efd9-4566-8bd6-8cfaf88c6939",
    "metadata": {},
    "outputs": [],
@@ -186,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 75,
    "id": "e29213a5-44c2-47ff-bf95-75bc4d656bb4",
    "metadata": {},
    "outputs": [],
@@ -200,17 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 76,
    "id": "a60a60c5-3a7c-403a-9a5b-3919eb39c749",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "142"
+       "165"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "id": "8728de86-526c-47cf-8557-bb1bb8715d2c",
    "metadata": {},
    "outputs": [],
@@ -236,17 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "ac4280dc-0200-4814-bb7e-de42d593e8db",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1397: 1, 981: 1, 75: 1, 2: 8, 1: 131}"
+       "{1685: 1, 1158: 1, 86: 1, 3: 1, 2: 7, 1: 154}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "abfb7726-fa1d-4e64-a70a-6007975e72ba",
    "metadata": {},
    "outputs": [],
@@ -272,6 +288,166 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a62f80d2-b2da-45c7-bfe6-1923af6eded0",
+   "metadata": {},
+   "source": [
+    "### leiden graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "749e9d08-3078-432e-9677-672d712280e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'degree'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-57-07845bf0ce34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcommunities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdegree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'degree'"
+     ]
+    }
+   ],
+   "source": [
+    "communities[0][0].degree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "9f560182-3c7e-435d-a931-d323d271b6a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_degree(cm_id, node_id):\n",
+    "    return len(set(communities[cm_id]).intersection(communities.graph.neighborhood(communities[cm_id][node_id])))\n",
+    "\n",
+    "def cut_edges(cm_id, node_id):\n",
+    "    \n",
+    "    global_id = communities[cm_id][node_id]\n",
+    "    neighbors_within_cluster = set(communities[cm_id]).intersection(communities.graph.neighborhood(communities[cm_id][node_id]))\n",
+    "    edges, values = np.argsort(cos_copy[global_id][list(neighbors_within_cluster)])[-100:][::-1], np.sort(cos_copy[global_id][list(neighbors_within_cluster)])[-100:][::-1]\n",
+    "    edges = [e for e, v in zip(edges, values) if v>0 and e!=global_id]\n",
+    "    \n",
+    "    return edges\n",
+    "\n",
+    "def get_more_edges(cm_id, node_id,similarity_matrix):\n",
+    "    neighbors_within_cluster = set(communities[cm_id]).intersection(communities.graph.neighborhood(communities[cm_id][node_id]))\n",
+    "    global_id = communities[cm_id][node_id]\n",
+    "    edges, values = np.argsort(similarity_matrix[global_id])[-10:][::-1], np.sort(similarity_matrix[global_id])[-10:][::-1]\n",
+    "    edges = [e for e, v in zip(edges, values) if e!=global_id]\n",
+    "    return edges\n",
+    "def get_edges(cm_id, node_id):\n",
+    "    global_id = communities[cm_id][node_id]\n",
+    "    edges = [e for e in communities.graph.neighborhood(communities[cm_id][node_id]) if e!=global_id]\n",
+    "    return edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "e57d84bf-65eb-45df-b6a5-a90289756614",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2834}"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neighbors_within_cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "82c5a6c0-1f11-4fae-93e9-4f6bf0f83514",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1437029321978286080"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "e1220619-9004-40c0-9c57-007fbfe8489e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "165it [01:27,  1.89it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gnn_graph = nx.Graph()\n",
+    "\n",
+    "# similar matrix as the graph adjacency matrix\n",
+    "similarity_matrix = util.cos_sim(train_emd['clip_imgs_sum_text_embeddings'].tolist(),train_emd['clip_imgs_sum_text_embeddings'].tolist()).detach().cpu().numpy()\n",
+    "\n",
+    "# For each community (i.e., cluster)\n",
+    "for cm_id , communitie in tqdm(enumerate(communities)):\n",
+    "    # for each node within the cluster\n",
+    "    for node_id, global_id in enumerate(communitie):\n",
+    "        \n",
+    "        # Check if the node degree is higher than 100\n",
+    "        if get_degree(cm_id, node_id) > 100:\n",
+    "            # cut edges\n",
+    "            edges = cut_edges(cm_id, node_id)\n",
+    "            for e in edges:\n",
+    "                # Fix to tweetID\n",
+    "                gnn_graph.add_edge(train_emd.iloc[global_id]['tweet_id'], train_emd.iloc[e]['tweet_id'])\n",
+    "            \n",
+    "        # Check if the node has at least 10 edges    \n",
+    "        elif get_degree(cm_id, node_id) < 10:\n",
+    "            # include an edge to the most similar nodes\n",
+    "            edges = get_more_edges(cm_id, node_id, similarity_matrix)\n",
+    "            \n",
+    "            for e in edges:\n",
+    "                # Fix to tweetID\n",
+    "                gnn_graph.add_edge(train_emd.iloc[global_id]['tweet_id'], train_emd.iloc[e]['tweet_id'])\n",
+    "        else:\n",
+    "              for e in get_edges(cm_id, node_id):\n",
+    "                    # Fix to tweetID\n",
+    "                    gnn_graph.add_edge(train_emd.iloc[global_id]['tweet_id'], train_emd.iloc[e]['tweet_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "06c14101-da0b-40d3-9bdb-ac5406381e16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.write_gpickle(G, \"graphLeiden.gpickle\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "69c9d449-54df-4f90-8712-66ffa4560910",
    "metadata": {},
    "source": [
@@ -280,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "7cbe4cfc-1a0f-4a3c-9fd5-cd631bb910ca",
    "metadata": {},
    "outputs": [],
@@ -305,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "id": "a8105902-b4c5-41ce-8a4d-0b8561499325",
    "metadata": {},
    "outputs": [],
@@ -314,13 +490,13 @@
     "cid = []\n",
     "for k in range(len(dict_com)):\n",
     "    g = build_graph(dict_com[k])\n",
-    "    df_select.append(dict_com[k].sample(n=10, random_state=1))\n",
-    "    cid.append([k]*10)"
+    "    df_select.append(dict_com[k].sample(n=len(dict_com[k]), random_state=1))\n",
+    "    cid.append([k]*len(dict_com[k]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "73c55562-08bc-47f9-b1d6-0dda51386130",
    "metadata": {},
    "outputs": [],
@@ -340,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "c01ecc2b-4fb3-4879-b2c2-ed152c3cf6f1",
    "metadata": {},
    "outputs": [],
@@ -352,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "id": "dc62b634-a995-4e35-ad32-d6e6df9e5b1f",
    "metadata": {
     "scrolled": true,
@@ -365,13 +541,13 @@
     "cid = []\n",
     "for k in range(len(dict_com)):\n",
     "    g = build_graph(dict_com[k])\n",
-    "    df_select.append(dict_com[k].iloc[degree_centrality(g)[:10]])\n",
-    "    cid.append([k]*10)"
+    "    df_select.append(dict_com[k].iloc[degree_centrality(g)])\n",
+    "    cid.append([k]*len(dict_com[k]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "id": "71627e24-b53b-4302-878f-cd1c45ebdd9d",
    "metadata": {},
    "outputs": [],
@@ -393,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "id": "496975b3-a3d6-4a14-b6a9-61a2a38077e2",
    "metadata": {},
    "outputs": [],
@@ -405,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "id": "df94bdec-9e87-49df-9bac-088a20f41760",
    "metadata": {},
    "outputs": [],
@@ -415,13 +591,13 @@
     "cid = []\n",
     "for k in range(len(dict_com)):\n",
     "    g = build_graph(dict_com[k])\n",
-    "    df_select.append(dict_com[k].iloc[pagerank_centrality(g)[:10]])\n",
-    "    cid.append([k]*10)"
+    "    df_select.append(dict_com[k].iloc[pagerank_centrality(g)])\n",
+    "    cid.append([k]*len(dict_com[k]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "id": "c9541540-815f-41dd-a5c3-77a3bff4c6bd",
    "metadata": {},
    "outputs": [],
@@ -443,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "id": "7602e6c2-251a-4ba0-af81-c23ef74d6001",
    "metadata": {},
    "outputs": [],
@@ -455,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "id": "836294b9-1690-491d-8ac3-3f474d5caacc",
    "metadata": {},
    "outputs": [],
@@ -465,13 +641,13 @@
     "cid = []\n",
     "for k in range(len(dict_com)):\n",
     "    g = build_graph(dict_com[k])\n",
-    "    df_select.append(dict_com[k].iloc[betweenness_centrality(g)[:10]])\n",
-    "    cid.append([k]*10)"
+    "    df_select.append(dict_com[k].iloc[betweenness_centrality(g)])\n",
+    "    cid.append([k]*len(dict_com[k]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "id": "bf7082fb-594c-4cfb-be84-3365fd4ac64c",
    "metadata": {},
    "outputs": [],
@@ -493,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "id": "522d6462-4327-470f-94f0-e1520d48ffd2",
    "metadata": {},
    "outputs": [],
@@ -505,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "id": "9428b402-8d30-4779-9578-b272a1219de0",
    "metadata": {},
    "outputs": [],
@@ -514,13 +690,13 @@
     "cid = []\n",
     "for k in range(len(dict_com)):\n",
     "    g = build_graph(dict_com[k])\n",
-    "    df_select.append(dict_com[k].iloc[closeness_centrality(g)[:10]])\n",
-    "    cid.append([k]*10)"
+    "    df_select.append(dict_com[k].iloc[closeness_centrality(g)])\n",
+    "    cid.append([k]*len(dict_com[k]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "id": "2f898e38-9d4e-4d51-afd6-e2a0c21ed750",
    "metadata": {},
    "outputs": [],
@@ -542,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "id": "76f92a79-50ff-4ede-bb82-97b121fb0d92",
    "metadata": {},
    "outputs": [],
@@ -554,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 37,
    "id": "682cb840-cf45-4699-aae7-e3f13f359d44",
    "metadata": {},
    "outputs": [],
@@ -563,13 +739,13 @@
     "cid = []\n",
     "for k in range(len(dict_com)):\n",
     "    g = build_graph(dict_com[k])\n",
-    "    df_select.append(dict_com[k].iloc[eigenvector_centrality(g)[:10]])\n",
-    "    cid.append([k]*10)"
+    "    df_select.append(dict_com[k].iloc[eigenvector_centrality(g)])\n",
+    "    cid.append([k]*len(dict_com[k]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "id": "d2853640-cabe-47bc-9758-fe2072b46c48",
    "metadata": {},
    "outputs": [],
@@ -599,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 39,
    "id": "3e5a41d3-60d6-4cfa-b0be-08a2d0db5de4",
    "metadata": {},
    "outputs": [],
@@ -614,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "id": "f03f80eb-97cb-4f83-8165-9ec3fe75a5b0",
    "metadata": {},
    "outputs": [],
@@ -624,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 41,
    "id": "3ebb8513-bdd0-44ca-aae7-d51cf91f435f",
    "metadata": {},
    "outputs": [],
@@ -634,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 42,
    "id": "d3df53cc-ee99-4909-9319-c95088d6b651",
    "metadata": {},
    "outputs": [],
@@ -661,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 43,
    "id": "ae44bee8-82c6-4f48-8288-be47e236b7ad",
    "metadata": {},
    "outputs": [],
@@ -670,13 +846,13 @@
     "cid = []\n",
     "for k in range(len(dict_com)):\n",
     "    g = build_graph(dict_com[k])\n",
-    "    df_select.append(dict_com[k].iloc[mci_centrality(g, dict_com[k])[:10]])\n",
-    "    cid.append([k]*10)"
+    "    df_select.append(dict_com[k].iloc[mci_centrality(g, dict_com[k])])\n",
+    "    cid.append([k]*len(dict_com[k]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 44,
    "id": "51d289a0-9407-4468-87ee-7e54da5a87af",
    "metadata": {},
    "outputs": [],
