--- a/clusterings/clustering_representative.ipynb
+++ b/clusterings/clustering_representative.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "186a62f1-a483-441b-b09c-4832c72d8c16",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b48934da-e052-482a-a2fc-504dcd1967df",
    "metadata": {},
    "outputs": [],
@@ -23,24 +23,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "6f8f3139-0e14-47f1-8798-fa6e83054ca7",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train = pd.read_pickle('../clip-training/train.pkl')\n",
     "df_val = pd.read_pickle('../clip-training/eval.pkl')\n",
-    "df_select = pd.concat([df_train, df_val])"
+    "df_test = pd.read_pickle('../clip-training/test_data.pkl')\n",
+    "\n",
+    "df_select = pd.concat([df_train, df_val])\n",
+    "df_full = pd.concat([df_train, df_val, df_test])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "95ca304b-b14d-4a4c-96a7-94211a04063d",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_emd = clip_emd[clip_emd['tweet_id'].isin(df_select['tweet_id'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8f755153-42d3-4362-a363-2b557fd41b62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_emd = clip_emd[clip_emd['tweet_id'].isin(df_full['tweet_id'])]"
    ]
   },
   {
@@ -55,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "f7dfc58c-0fc6-4395-951d-7642b24502dd",
    "metadata": {},
    "outputs": [],
@@ -75,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 32,
    "id": "96d3b81a-a9bc-4dc1-858b-52d99d1b08d4",
    "metadata": {},
    "outputs": [],
@@ -88,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "1a1f25f2-1ffd-4b4c-8d2b-ab24f18a05b8",
    "metadata": {},
    "outputs": [],
@@ -99,19 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 34,
    "id": "3ed419a5-6e49-4788-b827-6f5e5d0b5dc0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# similar matrix as the graph adjacency matrix\n",
-    "cos_mat = util.cos_sim(train_emd['clip_imgs_sum_text_embeddings'].tolist(),train_emd['clip_imgs_sum_text_embeddings'].tolist()) \n",
-    "# cos_mat = util.cos_sim(train_emd['clip_imgs_cat_text_embeddings'].tolist(),train_emd['clip_imgs_cat_text_embeddings'].tolist())"
+    "# cos_mat = util.cos_sim(train_emd['clip_imgs_sum_text_embeddings'].tolist(),train_emd['clip_imgs_sum_text_embeddings'].tolist()) \n",
+    "# cos_mat = util.cos_sim(train_emd['clip_imgs_cat_text_embeddings'].tolist(),train_emd['clip_imgs_cat_text_embeddings'].tolist())\n",
+    "cos_mat = util.cos_sim(full_emd['clip_imgs_sum_text_embeddings'].tolist(),full_emd['clip_imgs_sum_text_embeddings'].tolist()) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "id": "c56026f8-4ab7-433f-8ed7-88348087bd45",
    "metadata": {},
    "outputs": [],
@@ -121,17 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 36,
    "id": "709e391f-ff5b-4481-afa7-a6a17ae74380",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3100, 3100)"
+       "(5000, 5000)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 37,
    "id": "b61722ed-581a-4201-b1ed-32178dc94cb6",
    "metadata": {},
    "outputs": [],
@@ -153,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 38,
    "id": "f26b4061-da17-4b40-a7af-10d6978892f3",
    "metadata": {},
    "outputs": [],
@@ -163,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "id": "547322bd-18bd-4ff7-b8c2-83c0888ce046",
    "metadata": {},
    "outputs": [],
@@ -174,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 39,
    "id": "6743d728-52cf-4f11-b55c-90f9f9d00e0d",
    "metadata": {},
    "outputs": [],
@@ -192,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 40,
    "id": "4d3d853e-efd9-4566-8bd6-8cfaf88c6939",
    "metadata": {},
    "outputs": [],
@@ -202,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 41,
    "id": "e29213a5-44c2-47ff-bf95-75bc4d656bb4",
    "metadata": {},
    "outputs": [],
@@ -216,17 +230,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 42,
    "id": "a60a60c5-3a7c-403a-9a5b-3919eb39c749",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "165"
+       "232"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "8728de86-526c-47cf-8557-bb1bb8715d2c",
    "metadata": {},
    "outputs": [],
@@ -252,17 +266,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "ac4280dc-0200-4814-bb7e-de42d593e8db",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1685: 1, 1158: 1, 86: 1, 3: 1, 2: 7, 1: 154}"
+       "{2760: 1, 1802: 1, 175: 1, 7: 1, 3: 8, 2: 12, 1: 208}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "abfb7726-fa1d-4e64-a70a-6007975e72ba",
    "metadata": {},
    "outputs": [],
@@ -296,29 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "id": "749e9d08-3078-432e-9677-672d712280e0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'degree'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-57-07845bf0ce34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcommunities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdegree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'degree'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "communities[0][0].degree"
+    "# communities[0][0].degree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 45,
    "id": "9f560182-3c7e-435d-a931-d323d271b6a6",
    "metadata": {},
    "outputs": [],
@@ -349,47 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 26,
    "id": "e57d84bf-65eb-45df-b6a5-a90289756614",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{2834}"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "neighbors_within_cluster"
+    "# neighbors_within_cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "82c5a6c0-1f11-4fae-93e9-4f6bf0f83514",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1437029321978286080"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 46,
    "id": "e1220619-9004-40c0-9c57-007fbfe8489e",
    "metadata": {
     "tags": []
@@ -399,7 +371,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "165it [01:27,  1.89it/s]\n"
+      "232it [02:09,  1.79it/s]\n"
      ]
     }
    ],
@@ -407,7 +379,8 @@
     "gnn_graph = nx.Graph()\n",
     "\n",
     "# similar matrix as the graph adjacency matrix\n",
-    "similarity_matrix = util.cos_sim(train_emd['clip_imgs_sum_text_embeddings'].tolist(),train_emd['clip_imgs_sum_text_embeddings'].tolist()).detach().cpu().numpy()\n",
+    "# similarity_matrix = util.cos_sim(train_emd['clip_imgs_sum_text_embeddings'].tolist(),train_emd['clip_imgs_sum_text_embeddings'].tolist()).detach().cpu().numpy()\n",
+    "similarity_matrix = util.cos_sim(full_emd['clip_imgs_sum_text_embeddings'].tolist(),full_emd['clip_imgs_sum_text_embeddings'].tolist()).detach().cpu().numpy()\n",
     "\n",
     "# For each community (i.e., cluster)\n",
     "for cm_id , communitie in tqdm(enumerate(communities)):\n",
@@ -420,7 +393,9 @@
     "            edges = cut_edges(cm_id, node_id)\n",
     "            for e in edges:\n",
     "                # Fix to tweetID\n",
-    "                gnn_graph.add_edge(train_emd.iloc[global_id]['tweet_id'], train_emd.iloc[e]['tweet_id'])\n",
+    "#                 gnn_graph.add_edge(train_emd.iloc[global_id]['tweet_id'], train_emd.iloc[e]['tweet_id'])\n",
+    "                gnn_graph.add_edge(full_emd.iloc[global_id]['tweet_id'], full_emd.iloc[e]['tweet_id'])\n",
+    "\n",
     "            \n",
     "        # Check if the node has at least 10 edges    \n",
     "        elif get_degree(cm_id, node_id) < 10:\n",
@@ -429,21 +404,21 @@
     "            \n",
     "            for e in edges:\n",
     "                # Fix to tweetID\n",
-    "                gnn_graph.add_edge(train_emd.iloc[global_id]['tweet_id'], train_emd.iloc[e]['tweet_id'])\n",
+    "                gnn_graph.add_edge(full_emd.iloc[global_id]['tweet_id'], full_emd.iloc[e]['tweet_id'])\n",
     "        else:\n",
     "              for e in get_edges(cm_id, node_id):\n",
     "                    # Fix to tweetID\n",
-    "                    gnn_graph.add_edge(train_emd.iloc[global_id]['tweet_id'], train_emd.iloc[e]['tweet_id'])"
+    "                    gnn_graph.add_edge(full_emd.iloc[global_id]['tweet_id'], full_emd.iloc[e]['tweet_id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 47,
    "id": "06c14101-da0b-40d3-9bdb-ac5406381e16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nx.write_gpickle(G, \"graphLeiden.gpickle\")"
+    "nx.write_gpickle(gnn_graph, \"graphLeidenFullSum.gpickle\")"
    ]
   },
   {
